Remove unnecessary files and fix layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ hr{border-color:transparent; margin:15px 0;}
     text-indent: -9999px;
     width: 126px;
 }
-.navbar-nav li a{padding:24px 11px 11px; margin:5px 15px; }
+.navbar-default .navbar-nav li a{padding:24px 11px 11px; margin:5px 15px; }
 .navbar-default .navbar-nav .active a, .navbar-default .navbar-nav .active a:hover, .navbar-default .navbar-nav .active a:focus{background:none; color:#161515; text-decoration:none; border-bottom:3px solid #71b406; padding:24px 11px 11px;}
 .navbar-default .navbar-nav li a:hover{border-bottom:3px solid #71b406; padding:24px 11px 11px;}
 .navbar-default .navbar-nav li a{color:#161515; font-size: 14px;}
@@ -37,6 +37,7 @@ background-repeat:no-repeat; background-position:center right; padding-bottom:25
 .wrapL h1{color:#161515; font-size:65px; margin-top:0px; font-weight:400}
 .wrapR img.dlogo{position:relative; top:15px; left:172px; margin-bottom:30px;}
 .wrapR h4{margin:8px 0px 0px 127px; font-weight:300;}
+.wwapR{padding-left: 0px;}
 /* .wrapR {padding-left: 12px;} */
 button.btnW{margin:10px 0px 0px 130px; background:#cbcbca; -moz-box-shadow:2px 2px 4px 1px #aaaaa9;  -webkit-box-shadow: 2px 2px 4px 1px #aaaaa9;  box-shadow:2px 2px 4px 1px #aaaaa9;}
 /*----------------------------------about----------------------*/
